--- a/index.html
+++ b/index.html
@@ -46,19 +46,31 @@
         <li><a href="teaching.html">teaching</a></li>
         <li><a href="papers.html">papers</a></li>
         <li><a href="patents.html">patents</a></li>
+        <li><a href="CV.pdf">cv</a></li>
       </ul>
     </nav>
   </div>
 </header>
+<div class="section">
+  <!--Clarity Paper AI Magazine-->
+  <div class="paper-entry">
+    <img src="images/michelle.png" alt="Michelle">
+    <div class="reference">
+      <p>
+        Hi there. I am Professor Morales, a computational linguist passionate about building language technologies to help make people feel better. I am especially interested in studying how we can build safe and responsible AI applications. I currently teach Data Science and AI courses at Farmingdale State College and Columbia University.
+      </p>
+    </div>
+  </div>
 
-<div class="content">
-  <!-- Avatar image -->
-  <img src="images/michelle-image.jpg" alt="Michelle Morales" class="avatar" />
+</div>
+<!--<div class="content">-->
+<!--  &lt;!&ndash; Avatar image &ndash;&gt;-->
+<!--  <img src="images/michelle-image.jpg" alt="Michelle Morales" class="avatar" />-->
 
-  <!-- Text -->
-  <p>
-    Hi there 👋 I am Professor Morales, a computational linguist passionate about building language technologies to help make people feel better. I am especially interested in studying how we can build safe and responsible AI applications. I currently teach Data Science and AI courses at Farmingdale State College and Columbia University.
-  </p>
-
+<!--  &lt;!&ndash; Text &ndash;&gt;-->
+<!--  <p>-->
+<!--    Hi there 👋 I am Professor Morales, a computational linguist passionate about building language technologies to help make people feel better. I am especially interested in studying how we can build safe and responsible AI applications. I currently teach Data Science and AI courses at Farmingdale State College and Columbia University.-->
+<!--  </p>-->
+<!--</div>-->
 </body>
 </html>
