--- a/papers.html
+++ b/papers.html
@@ -31,148 +31,154 @@
         <li><a href="teaching.html">teaching</a></li>
         <li><a href="papers.html">papers</a></li>
         <li><a href="patents.html">patents</a></li>
+        <li><a href="CV.pdf">cv</a></li>
       </ul>
     </nav>
   </div>
 </header>
 
+<div class="section">
+  <p>My publications listed below fall into two broad research categories.<br><br>
 
-<p>My publications listed below fall into two broad research categories. </p>
+  The first category is focused on building Machine Learning systems for mental health use cases. Many of my papers which ultimately culminated in my dissertation focused on this research area. Papers in this first category include literature reviews as well as descriptions of methods for building depression classification and suicide risk assessment systems leveraging multimodal datasets (video, audio, and text). Much of the code used to build the systems described in the papers are represented in an <a href="https://github.com/michellemorales/OpenMM">open-source tool</a> I built and released as part of my research.<br><br>
 
-<p> The first category is focused on building Machine Learning systems for mental health use cases. Many of my papers which ultimately culminated in my dissertation focused on this research area. Papers in this first category include literature reviews as well as descriptions of methods for building depression classification and suicide risk assessment systems leveraging multimodal datasets (video, audio, and text). Much of the code used to build the systems described in the papers are represented in an <a href="https://github.com/michellemorales/OpenMM">open-source tool</a> I built and released as part of my research. </p>
-
-  <p>The second category of papers represent the work and research I conducted while at IBM, which focused on applying NLP techniques to assess product competitiveness.</p>
-
-<!--Clarity Paper AI Magazine-->
-<div class="paper-entry">
-  <img src="figures/paper1.png" alt="Paper 1">
-  <div class="reference">
-    <h3>Clarity 2.0: Improved assessment of product competitiveness from online content</h3>
-    <p>Yufeng Huang, Mariana Bernagozzi, <b>Michelle Morales</b>, Sheema Usmani, Biplav Srivastava, Michelle Mullins
-      <b>(2021)</b><i>. AI Magazine</i>
-    </p>
-    <p><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1609/aimag.v42i2.15100">[paper]</a>
-    </p>
+  The second category of papers represent the work and research I conducted while at IBM, which focused on applying NLP techniques to assess product competitiveness.</p>
   </div>
+  <!--Clarity Paper AI Magazine-->
+  <div class="paper-entry">
+    <img src="figures/paper1.png" alt="Paper 1">
+    <div class="reference">
+      <h3>Clarity 2.0: Improved assessment of product competitiveness from online content</h3>
+      <p>Yufeng Huang, Mariana Bernagozzi, <b>Michelle Morales</b>, Sheema Usmani, Biplav Srivastava, Michelle Mullins
+        <b>(2021)</b><i>. AI Magazine</i>
+      </p>
+      <p><a href="https://onlinelibrary.wiley.com/doi/pdf/10.1609/aimag.v42i2.15100">[paper]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--CLPysch Shared Task 2021 - Second time at IBM-->
+  <div class="paper-entry">
+    <img src="figures/paper2.png" alt="Paper 2">
+    <div class="reference">
+      <h3>A comparison of simple vs. complex models for suicide risk assessment</h3>
+      <p><b>Michelle Morales</b>, Prajjalita Dey, Kriti Kohli
+        <b>(2021)</b><i>. NAACL HLT, Proceedings of the seventh workshop on computational linguistics and clinical psychology</i>
+      </p>
+      <p><a href="https://aclanthology.org/2021.clpsych-1.11.pdf">[paper]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--Clarity AAAI-->
+  <!--Two articles that year, this is the longer version, same content but more detailed-->
+  <div class="paper-entry">
+    <img src="figures/paper3.png" alt="Paper 3">
+    <div class="reference">
+      <h3>Clarity: Data-driven automatic assessment of product competitiveness</h3>
+      <p>Sheema Usmani, Mariana Bernagozzi, Yufeng Huang, <b>Michelle Morales</b>, Amir Sabet Sarvestani, Biplav Srivastava
+        <b>(2020)</b><i>. Proceedings of the AAAI Conference on Artificial Intelligence</i>
+      </p>
+      <p><a href="https://ojs.aaai.org/index.php/AAAI/article/download/7025/6879">[paper]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--CLPsych Shared Task 2019 - First time at IBM-->
+  <div class="paper-entry">
+    <img src="figures/paper4.png" alt="Paper 4">
+    <div class="reference">
+      <h3>An investigation of deep learning systems for suicide risk assessment</h3>
+      <p><b>Michelle Morales</b>, Prajjalita Dey, Thomas Theisen, Danny Belitz, Natalia Chernova
+        <b>(2019)</b><i>. Proceedings of the sixth workshop on computational linguistics and clinical psychology</i>
+      </p>
+      <p><a href="https://aclanthology.org/W19-3023.pdf">[paper]</a> <a href="https://github.com/michellemorales/ibm_dsteam_clpsych19">[code]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--CLPsych - Fusion technique paper-->
+  <div class="paper-entry">
+    <img src="figures/paper5.png" alt="Paper 5">
+    <div class="reference">
+      <h3>A linguistically-informed fusion approach for multimodal depression detection</h3>
+      <p><b>Michelle Morales</b>, Stefan Scherer, Rivka Levitan
+        <b>(2018)</b><i>. Proceedings of the fifth workshop on computational linguistics and clinical psychology: from keyboard to clinic</i>
+      </p>
+      <p><a href="https://aclanthology.org/W18-0602.pdf">[paper]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--Paper 6 - Dissertation-->
+  <div class="paper-entry">
+    <img src="figures/dissertation.png" alt="Dissertation Paper">
+    <div class="reference">
+      <h3>Multimodal depression detection: An investigation of features and fusion techniques for automated systems</h3>
+      <p><b>Michelle Morales</b>
+        <b>(2018)</b><i>. City University of New York</i>
+      </p>
+      <p><a href="https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=3607&context=gc_etds">[paper]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--Cross-modal lit review-->
+  <div class="paper-entry">
+    <img src="figures/paper7.png" alt="Paper 7">
+    <div class="reference">
+      <h3>A cross-modal review of indicators for depression detection systems</h3>
+      <p><b>Michelle Morales</b> Stefan Scherer, Rivka Levitan
+        <b>(2017)</b><i>. Proceedings of the fourth workshop on computational linguistics and clinical psychology</i>
+      </p>
+      <p><a href="https://aclanthology.org/W17-3101.pdf">[paper]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--OpenMM-->
+  <div class="paper-entry">
+    <img src="figures/paper8.png" alt="Paper 8">
+    <div class="reference">
+      <h3>OpenMM: An Open-Source Multimodal Feature Extraction Tool.</h3>
+      <p><b>Michelle Morales</b> Stefan Scherer, Rivka Levitan
+        <b>(2017)</b><i>. INTERSPEECH Proceedings</i>
+      </p>
+      <p><a href="https://www.researchgate.net/profile/Michelle-Morales-6/publication/319185055_OpenMM_An_Open-Source_Multimodal_Feature_Extraction_Tool/links/59a9808ca6fdcce55a2fc343/OpenMM-An-Open-Source-Multimodal-Feature-Extraction-Tool.pdf">[paper]</a> <a href="https://github.com/michellemorales/OpenMM">[code]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--Speech vs text paper-->
+  <div class="paper-entry">
+    <img src="figures/paper9.png" alt="Paper 9">
+    <div class="reference">
+      <h3>Speech vs. text: A comparative analysis of features for depression detection systems</h3>
+      <p><b>Michelle Morales</b>, Rivka Levitan
+        <b>(2016)</b><i>. IEEE Spoken language technology workshop</i>
+      </p>
+      <p><a href="https://ieeexplore.ieee.org/abstract/document/7846256">[paper]</a>
+      </p>
+    </div>
+  </div>
+
+  <!--Speech vs text paper-->
+  <div class="paper-entry">
+    <img src="figures/paper10.png" alt="Paper 10">
+    <div class="reference">
+      <h3>Mitigating confounding factors in depression detection using an unsupervised clustering approach</h3>
+      <p><b>Michelle Morales</b>, Rivka Levitan
+        <b>(2016)</b><i>. Computing and Mental Health Workshop (CHI),</i>
+      </p>
+      <p><a href="https://www.researchgate.net/profile/Michelle-Morales-6/publication/301696042_Mitigating_Confounding_Factors_in_Depression_Detection_Using_an_Unsupervised_Clustering_Approach/links/57234f2908aee491cb376d5a/Mitigating-Confounding-Factors-in-Depression-Detection-Using-an-Unsupervised-Clustering-Approach.pdf">[paper]</a>
+      </p>
+    </div>
+  </div>
+
 </div>
 
-<!--CLPysch Shared Task 2021 - Second time at IBM-->
-<div class="paper-entry">
-  <img src="figures/paper2.png" alt="Paper 2">
-  <div class="reference">
-    <h3>A comparison of simple vs. complex models for suicide risk assessment</h3>
-    <p><b>Michelle Morales</b>, Prajjalita Dey, Kriti Kohli
-      <b>(2021)</b><i>. NAACL HLT, Proceedings of the seventh workshop on computational linguistics and clinical psychology</i>
-    </p>
-    <p><a href="https://aclanthology.org/2021.clpsych-1.11.pdf">[paper]</a>
-    </p>
-  </div>
-</div>
 
-<!--Clarity AAAI-->
-<!--Two articles that year, this is the longer version, same content but more detailed-->
-<div class="paper-entry">
-  <img src="figures/paper3.png" alt="Paper 3">
-  <div class="reference">
-    <h3>Clarity: Data-driven automatic assessment of product competitiveness</h3>
-    <p>Sheema Usmani, Mariana Bernagozzi, Yufeng Huang, <b>Michelle Morales</b>, Amir Sabet Sarvestani, Biplav Srivastava
-      <b>(2020)</b><i>. Proceedings of the AAAI Conference on Artificial Intelligence</i>
-    </p>
-    <p><a href="https://ojs.aaai.org/index.php/AAAI/article/download/7025/6879">[paper]</a>
-    </p>
-  </div>
-</div>
 
-<!--CLPsych Shared Task 2019 - First time at IBM-->
-<div class="paper-entry">
-  <img src="figures/paper4.png" alt="Paper 4">
-  <div class="reference">
-    <h3>An investigation of deep learning systems for suicide risk assessment</h3>
-    <p><b>Michelle Morales</b>, Prajjalita Dey, Thomas Theisen, Danny Belitz, Natalia Chernova
-      <b>(2019)</b><i>. Proceedings of the sixth workshop on computational linguistics and clinical psychology</i>
-    </p>
-    <p><a href="https://aclanthology.org/W19-3023.pdf">[paper]</a> <a href="https://github.com/michellemorales/ibm_dsteam_clpsych19">[code]</a>
-    </p>
-  </div>
-</div>
-
-<!--CLPsych - Fusion technique paper-->
-<div class="paper-entry">
-  <img src="figures/paper5.png" alt="Paper 5">
-  <div class="reference">
-    <h3>A linguistically-informed fusion approach for multimodal depression detection</h3>
-    <p><b>Michelle Morales</b>, Stefan Scherer, Rivka Levitan
-      <b>(2018)</b><i>. Proceedings of the fifth workshop on computational linguistics and clinical psychology: from keyboard to clinic</i>
-    </p>
-    <p><a href="https://aclanthology.org/W18-0602.pdf">[paper]</a>
-    </p>
-  </div>
-</div>
-
-<!--Paper 6 - Dissertation-->
-<div class="paper-entry">
-  <img src="figures/dissertation.png" alt="Dissertation Paper">
-  <div class="reference">
-    <h3>Multimodal depression detection: An investigation of features and fusion techniques for automated systems</h3>
-    <p><b>Michelle Morales</b>
-      <b>(2018)</b><i>. City University of New York</i>
-    </p>
-    <p><a href="https://academicworks.cuny.edu/cgi/viewcontent.cgi?article=3607&context=gc_etds">[paper]</a>
-    </p>
-  </div>
-</div>
-
-<!--Cross-modal lit review-->
-<div class="paper-entry">
-  <img src="figures/paper7.png" alt="Paper 7">
-  <div class="reference">
-    <h3>A cross-modal review of indicators for depression detection systems</h3>
-    <p><b>Michelle Morales</b> Stefan Scherer, Rivka Levitan
-      <b>(2017)</b><i>. Proceedings of the fourth workshop on computational linguistics and clinical psychology</i>
-    </p>
-    <p><a href="https://aclanthology.org/W17-3101.pdf">[paper]</a>
-    </p>
-  </div>
-</div>
-
-<!--OpenMM-->
-<div class="paper-entry">
-  <img src="figures/paper8.png" alt="Paper 8">
-  <div class="reference">
-    <h3>OpenMM: An Open-Source Multimodal Feature Extraction Tool.</h3>
-    <p><b>Michelle Morales</b> Stefan Scherer, Rivka Levitan
-      <b>(2017)</b><i>. INTERSPEECH Proceedings</i>
-    </p>
-    <p><a href="https://www.researchgate.net/profile/Michelle-Morales-6/publication/319185055_OpenMM_An_Open-Source_Multimodal_Feature_Extraction_Tool/links/59a9808ca6fdcce55a2fc343/OpenMM-An-Open-Source-Multimodal-Feature-Extraction-Tool.pdf">[paper]</a> <a href="https://github.com/michellemorales/OpenMM">[code]</a>
-    </p>
-  </div>
-</div>
-
-<!--Speech vs text paper-->
-<div class="paper-entry">
-  <img src="figures/paper9.png" alt="Paper 9">
-  <div class="reference">
-    <h3>Speech vs. text: A comparative analysis of features for depression detection systems</h3>
-    <p><b>Michelle Morales</b>, Rivka Levitan
-      <b>(2016)</b><i>. IEEE Spoken language technology workshop</i>
-    </p>
-    <p><a href="https://ieeexplore.ieee.org/abstract/document/7846256">[paper]</a>
-    </p>
-  </div>
-</div>
-
-<!--Speech vs text paper-->
-<div class="paper-entry">
-  <img src="figures/paper10.png" alt="Paper 10">
-  <div class="reference">
-    <h3>Mitigating confounding factors in depression detection using an unsupervised clustering approach</h3>
-    <p><b>Michelle Morales</b>, Rivka Levitan
-      <b>(2016)</b><i>. Computing and Mental Health Workshop (CHI),</i>
-    </p>
-    <p><a href="https://www.researchgate.net/profile/Michelle-Morales-6/publication/301696042_Mitigating_Confounding_Factors_in_Depression_Detection_Using_an_Unsupervised_Clustering_Approach/links/57234f2908aee491cb376d5a/Mitigating-Confounding-Factors-in-Depression-Detection-Using-an-Unsupervised-Clustering-Approach.pdf">[paper]</a>
-    </p>
-  </div>
-</div>
 
 
 </body>
