--- a/patents.html
+++ b/patents.html
@@ -30,6 +30,7 @@
         <li><a href="teaching.html">teaching</a></li>
         <li><a href="papers.html">papers</a></li>
         <li><a href="patents.html">patents</a></li>
+        <li><a href="CV.pdf">cv</a></li>
       </ul>
     </nav>
   </div>
