--- a/papers.html
+++ b/papers.html
@@ -24,8 +24,9 @@
 
 <header>
   <div class="navbar">
-    <div class="title">Michelle Morales, Ph.D. </div>
-    <nav>
+    <div class="title">Michelle Morales, PhD </div>
+    <button class="menu-toggle">&#9776;</button>
+    <nav id="nav-menu">
       <ul>
         <li><a href="index.html">about</a></li>
         <li><a href="teaching.html">teaching</a></li>
@@ -180,6 +181,6 @@
 
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
