--- a/patents.html
+++ b/patents.html
@@ -23,8 +23,9 @@
 
 <header>
   <div class="navbar">
-    <div class="title">Michelle Morales, Ph.D. </div>
-    <nav>
+    <div class="title">Michelle Morales, PhD </div>
+    <button class="menu-toggle">&#9776;</button>
+    <nav id="nav-menu">
       <ul>
         <li><a href="index.html">about</a></li>
         <li><a href="teaching.html">teaching</a></li>
@@ -77,5 +78,6 @@
     </p>
   </div>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
