--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@
 
 <body class="papers">
 
-<<header>
+<header>
   <div class="navbar">
     <div class="title">Michelle Morales, PhD </div>
     <button class="menu-toggle">&#9776;</button>
